[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["DaniloALR <dluzrios@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9"
pytest = "^8.3.2"
factory-boy = "^3.3.0"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"
whitenoise = "^6.7.0"
waitress = "^3.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
